feat: change to reading time to be more visible

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -11,7 +11,6 @@
                         <h3 class="heading heading-6 strong-600 text-uppercase mb-0">Sujets</h3>
                     </div>
                 </div>
-
                 <span class="space-xs-lg"></span>
                 <div class="cols-md-space cols-sm-space cols-xs-space d-flex flex-wrap">
                 <% @topics.each do |topic| %>
@@ -19,14 +18,14 @@
                             <div class="card z-depth-2-top h-auto">
                                 <div class="card-image">
                                     <div class="view view-first">
-                                        <%= link_to topic_path(topic) do %>
+                                        <%= link_to topic_path(topic, anchor: "top") do %>
                                         <%= image_tag topic.main_picture.variant(resize: "1000x760!") %>
                                         <% end %>
                                     </div>
                                 </div>
                                 <div class="card-body h-25">
                                     <h3 class="heading heading-5 strong-600 mb-0">
-                                        <%= link_to topic_path(topic) do %>
+                                        <%= link_to topic_path(topic, anchor: "top") do %>
                                         <%=topic.title%>
                                         <% end %>
                                     </h3>
@@ -37,7 +36,7 @@
                                             <div class="block-author">
                                                 <div class="author-info">
                                                     <div class="author-name">
-                                                        <%= link_to topic_path(topic) do %>
+                                                        <%= link_to topic_path(topic, anchor: "top") do %>
                                                         <%=topic.short_description%>
                                                         <% end %>
                                                     </div>
@@ -45,8 +44,8 @@
                                             </div>
                                         </div>
                                     </div>    
-                                    <div class="col text-right">
-                                        <ul class="inline-links inline-links--style-2">
+                                    <div class="col text-right text-xs-right">
+                                        <ul class="heading heading-sm strong-400 text-muted mt-3 mb-0">
                                             <li>
                                                 Temps de lecture: <%= Random.rand(5..30) %> min
                                             </li>
