feat: change to reading time to be more visible

--- a/app/views/topics/_other_articles.html.erb
+++ b/app/views/topics/_other_articles.html.erb
@@ -28,8 +28,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col text-right">
-                    <ul class="inline-links inline-links--style-2">
+                <div class="col text-right text-xs-right">
+                    <ul class="heading heading-sm strong-400 text-muted mt-0 mb-0">
                         <li>
                             Temps de lecture: <%= Random.rand(5..30) %> min
                         </li>
