feat: resize all pictures to feat the div that they are in

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,4 +1,4 @@
-<section class="slice sct-color-1">
+<section id="top" class="slice sct-color-1">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
@@ -10,12 +10,13 @@
                 </div>
             </div>
         </div>
+        <br><br><br><br>
         <div class="row">
             <div class="col-lg-9">
                 <div class="block block-post">
                     <div class="container-fluid">
                         <div class="text-center">
-                            <%= image_tag @topic.main_picture, class: "img-responsive rounded" %>
+                            <%= image_tag @topic.main_picture, class: "w-100 img-responsive rounded" %>
                         </div>
                     </div>
                     <div class="block-body block-post-body">
@@ -23,7 +24,7 @@
                             <%=@topic.short_description%>
                         </p>
                     </div>
-                    <br><br>
+                    <br><br><br>
                     <div id="driver_section" class="section-title section-title--style-1 text-center mb-4 ">
                         <h3 class="section-title-inner heading-3 strong-400 ">
                         <span>
@@ -34,14 +35,15 @@
                     <p class="text-justify">
                         <%=@topic.driver_section_intro%>
                     </p>
+                    <br><br>
                     <div class="block-body block-post-body">
                         <%= render partial: "dataset", collection: @driver_datasets  %>
                     </div>
                 </div>
-                <br>
+                <br><br><br>
                 <div class="container-fluid">
                     <div class="text-center">
-                        <%= image_tag @topic.main_picture, class: "img-responsive rounded" %>
+                        <%= image_tag @topic.main_picture, class: "w-100 img-responsive rounded" %>
                     </div>
                 </div>
                 <br><br>
@@ -56,14 +58,15 @@
                     <p class="text-justify">
                         <%=@topic.pressure_section_intro%>
                     </p>
+                <br><br>
                     <div class="block-body block-post-body">
                         <%= render partial: "dataset", collection: @pressure_datasets  %>
                     </div>
                 </div>
-                <br>
+                <br><br><br>
                 <div class="container-fluid">
                     <div class="text-center">
-                        <%= image_tag @topic.main_picture, class: "img-responsive rounded" %>
+                        <%= image_tag @topic.main_picture, class: "w-100 img-responsive rounded" %>
                     </div>
                 </div>
                 <br><br>
@@ -78,14 +81,15 @@
                     <p class="text-justify">
                         <%=@topic.state_section_intro%>
                     </p>
+                    <br><br>
                     <div class="block-body block-post-body">
                         <%= render partial: "dataset", collection: @state_datasets  %>
                     </div>
                 </div>
-                <br>
+                <br><br><br>
                 <div class="container-fluid">
                     <div class="text-center">
-                        <%= image_tag @topic.main_picture, class: "img-responsive rounded" %>
+                        <%= image_tag @topic.main_picture, class: "w-100 img-responsive rounded" %>
                     </div>
                 </div>
                 <br><br>
@@ -100,14 +104,15 @@
                     <p class="text-justify">
                         <%=@topic.impact_section_intro%>
                     </p>
+                    <br><br>
                     <div class="block-body block-post-body">
                         <%= render partial: "dataset", collection: @impact_datasets  %>
                     </div>
                 </div>
-                <br>
+                <br><br><br>
                 <div class="container-fluid">
                     <div class="text-center">
-                        <%= image_tag @topic.main_picture, class: "img-responsive rounded" %>
+                        <%= image_tag @topic.main_picture, class: "w-100 img-responsive rounded" %>
                     </div>
                 </div>
                 <br><br>
@@ -122,17 +127,18 @@
                     <p class="text-justify">
                         <%=@topic.response_section_intro%>
                     </p>
+                    <br><br>
                     <div class="block-body block-post-body">
                         <%= render partial: "dataset", collection: @response_datasets  %>
                     </div>
                 </div>
-                <br>
+                <br><br><br>
                 <div class="container-fluid">
                     <div class="text-center">
-                        <%= image_tag @topic.main_picture, class: "img-responsive rounded" %>
+                        <%= image_tag @topic.main_picture, class: "w-100 img-responsive rounded" %>
                     </div>
                 </div>
-                <br>
+                <br><br>
             </div>
             <div class="col-lg-3">
                 <div class="sidebar--sticky" data-stick-in-parent="true" id="scroll_data_target">
