fix: rm icons in devise views

--- a/app/views/devise/registrations/_edit_registration_form_fields.html.erb
+++ b/app/views/devise/registrations/_edit_registration_form_fields.html.erb
@@ -4,9 +4,9 @@
             <div class="col-lg-8">
                 <div class="form-card form-card--style-2 z-depth-2-top">
                     <div class="form-header text-center">
-                        <div class="form-header-icon">
-                            <i class="icon ion-log-in"></i>
-                        </div>
+                        
+                            <%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), height:"60px", alt:"Open Air" %>
+                        
                     </div>
                     <div class="form-body">
                         <div class="text-center px-2">
