feat: add navbar link to cart

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -30,7 +30,7 @@
 								</li>
 								<li class="nav-item">
               <% if (user_signed_in?) %>
-                  <%= link_to "Ma librairie", ma_collection_user_path(current_user.id), class: "nav-link dropdown-item" %>
+                  <%= link_to "Ma librairie", user_dataset_collection_path(current_user.id), class: "nav-link dropdown-item" %>
               <% end %>
                 </li>
               <li class="nav-item">
@@ -40,8 +40,10 @@
                 <%= link_to "S'inscrire", new_user_registration_path(anchor: "top"), class: "nav-link dropdown-item"  %>
                 <% end %>
                 <% else %>
-                <%= link_to "Mon profil", edit_user_registration_path(anchor: "top"), class: "nav-link dropdown-item" %>
+								<% if (controller_name == "dataset_collections") %>
+                <%= link_to "Editer mon profil", edit_user_registration_path(anchor: "top"), class: "nav-link dropdown-item" %>
                 <% end %>
+								<% end %>
               </li>
             </ul>
           </div>
