--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
 <%= render :partial => "devise/registrations/edit_registration_form_fields", :locals => { :f => f } %>
 <div class="row align-items-center">
 	<div class="col-md-12 text-right d-flex justify-content-around">
-		<%= f.submit "Sauvegarder", class: "btn btn-styled btn-base-1" %>
+		<%= f.submit "Sauvegarder", class: "btn btn-styled btn-round btn-base-1" %>
 		<% end %>
 		<%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Cette action est irréversible." }, method: :delete, class: "btn btn-styled btn-danger btn-round" %>
 	</div>
