--- a/app/views/dataset_collections/show.html.erb
+++ b/app/views/dataset_collections/show.html.erb
@@ -4,42 +4,13 @@
 		<!-- Order history table -->
 		<div class="card no-border">
 			<div>
-				<table class="table table-sm table-hover">
-					<thead>
-						<tr>
-							<th>Titre</th>
-							<th>Source</th>
-							<th>Téléchargement</th>
-							<th>Supprimer</th>
-						</tr>
-					</thead>
+<% if (@datasets.length > 0) %>
+<%= render "filled_dataset_collection" %>
+<% else %>
+<%= render "empty_dataset_collection" %>
+<% end %>
 
 
-					<tbody>
-						<% @datasets.each do |dataset| %>
-						<tr>
-							<td>
-								<%= dataset.title %>
-							</td>
-							<td>
-								<span class="badge badge--2 mr-4">
-								<i class="bg-blue"></i><%= link_to "Source ", dataset.db_link, class: "text-dark" %>
-								</span>
-							</td>
-							<td>
-								<%= button_to "Download .gif", root_path, class: "btn btn-styled btn-round btn-md border border-dark" %>
-							</td>
-							<td>
-							 	<%= link_to user_dataset_collection_path(dataset: dataset), method: :delete, class: "text-right pl-4" do %>
-                                 <i class="ion-trash-a"></i>
-								<% end %>
-							</td>
-							</tr>
-						<% end %>
-					</tbody>
-
-
-				</table>
 			</div>
 		</div>
 	</div>
