feat: add new section on about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,19 +3,97 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title section-title--style-1 text-center mb-4">
+                    <h3 class="section-title-inner heading-2 strong-400">
+                        <span>Open Air</span>
+                    </h3>
+                    <span class="section-title-delimiter clearfix"></span>
+                </div>
+                <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center mb-5">
+                    <p class="text-justify">Open Air est un projet porté par 5 développeurs provençaux conseillés par 'a
+                        Lab in the AIR'.
+                        Beaucoup d'informations sur la Qualité de l'Air sont disponibles en ligne.
+                        Ces bases de données sont dispersées entre plusieurs portails d'accès, parfois impossibles à
+                        lire
+                        sans logiciel spécifique, parfois difficile à comprendre.</p>
+                    <p class="text-justify">Un particulier doit également trouver un cheminement adapté entre ces
+                        informations, pour obtenir
+                        toutes les réponses recherchées avec un niveau de compréhension suffisant et sans oublier des
+                        parties importantes.</p>
+                    <p class="text-justify">Open Air est un portail où des experts publient des articles sur les centres
+                        d'intérêt des
+                        particuliers pour la thématique Qualité de l'Air. Ces articles référencent les bases de données
+                        concernées, et apportent une visualisation immédiate de cette base de donnée là où c'est utile.
+                    </p>
+                    <br><hr>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="section-title section-title--style-1 text-center mb-4">
+                    <h3 class="section-title-inner heading-2 strong-400">
+                        <span>A LAB in the AIR</span>
+                    </h3>
+                    <span class="section-title-delimiter clearfix"></span>
+                </div>
+                <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center mb-5">
+                    <p class="text-justify">« A LAB in the AIR » est un atelier digital ouvert qui permet le
+                        développement et la
+                        production « sur mesure » d’objets, biens et services grâce à la mise en place de
+                        processus de prototypage rapide et l’engagement des utilisateurs à travers la
+                        co-création de solutions. Sa thématique est les grandes politiques de l’air et du climat.</p>
+                        <br><hr>
+                </div>
+            </div>
+        </div>
+    </div>
+        <div class="container text-center">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="section-title section-title--style-1 text-center mb-4">
+                    <h3 class="section-title-inner heading-2 strong-400">
+                        <span>Le Modèle DPSIR</span>
+                    </h3>
+                    <span class="section-title-delimiter clearfix"></span>
+                </div>
+                <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center mb-5">
+                    <p class="text-justify">Tous nos articles sont rédigés en respectant un modèle nommé DPSIR. Ce modèle se compose de 5 sections:</p>
+                    <ul class= "text-left pl-3">
+                        <li><strong>D</strong>rivers/driving forces: (Déterminants sociétaux ou Forces motrices) ex: Activité maritime, production de déchets ménagers, émission de gaz des effets de serre par habitant...</li>
+                        <li><strong>P</strong>ressures: (Pressions) ex: Émissions de polluants(SO2, Nox), Température globale et locale...</li>
+                        <li><strong>S</strong>tate: (Situation) ex: Concentrations polluantes réglementaires, consommation finale d'énergie par secteur...</li>
+                        <li><strong>I</strong>mpact: (Impacts) ex: Maladies cardio-vasculaires, prevalence de l'asthme chez les adultes</li>
+                        <li><strong>R</strong>esponses: (Réponses) ex: Tax carbon, Éco tax...</li>
+                    </ul>
+                    <p class="text-justify">Des déterminants sociétaux ou Forces motrices (Drivers - D) conditionnent et expliquent des Pressions (Pressures - P) négatives et des Réponses (Responses - R) positives de la société.
+                    Les pressions et les réponses influent sur la situation, (State - S), qui réagissent par des impacts en retour (Impacts - I) vers la société.</p>
+                    <br><hr>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="section-title section-title--style-1 text-center mb-4">
                     <h3 class="section-title-inner heading-2 strong-400 ">
                         <span>Open data</span>
                     </h3>
                     <span class="section-title-delimiter clearfix"></span>
                 </div>
-
-                <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center mb-4">
-                    La Loi pour une République Numérique «Lemaire» (7 octobre 2016) oblige toutes collectivités
-                    exerçant une mission de service public d’ouvrir et de partager leurs données publiques (« open data
-                    »).
-                    L'entrée en vigueur devait être en 2018. Le challenge est de rendre l'accès à ces données, de
-                    manière exploitable, c'est-à-dire centré sur un usage, facilité voire immédiat de ces données.
-                    <hr>
+                <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center mb-5">
+                    <p class="text-justify">La Loi pour une République Numérique «Lemaire» (7 octobre 2016) oblige
+                        toutes collectivités
+                        exerçant une mission de service public d’ouvrir et de partager leurs données publiques (« open
+                        data
+                        »).</p>
+                    <p class="text-justify">L'entrée en vigueur devait être en 2018. Le challenge est de rendre l'accès
+                        à ces données, de
+                        manière exploitable, c'est-à-dire centré sur un usage, facilité voire immédiat de ces données.
+                    </p>
+                    <br><hr>   
                 </div>
             </div>
         </div>
@@ -29,34 +107,19 @@
                     </h3>
                     <span class="section-title-delimiter clearfix"></span>
                 </div>
-
-                <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center mb-4">
-                    Aix-Marseille est la 2nde métropôle de France avec 1.83 millions d’habitants. Elle est touchée par
-                    une forte pollution (activités industrielles (terminal portuaire de Fos) et fort trafic routier).
-                    En 2016, 71 000 personnes sont toujours exposées à des teneurs supérieures aux valeurs limites
-                    d’oxydes d’azotes sur le territoire de la métropole. Lorsqu’on s’attache aux recommandations OMS,
-                    plus contraignantes, 71 % de la population est concernée par au moins un dépassement des teneurs en
-                    NOx ou en PM10.
-                    <hr>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container text-center">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="section-title section-title--style-1 text-center mb-4">
-                    <h3 class="section-title-inner heading-2 strong-400">
-                        <span>Lab in the AIR</span>
-                    </h3>
-                    <span class="section-title-delimiter clearfix"></span>
-                </div>
-
-                <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center">
-                    « a LAB in the AIR » est un atelier digital ouvert qui permet le développement et la
-                    production « sur mesure » d’objets, biens et services grâce à la mise en place de
-                    processus de prototypage rapide et l’engagement des utilisateurs à travers la
-                    co-création de solutions. Sa thématique est les grandes politiques de l’air et du climat.
+                <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center mb-5">
+                    <p class="text-justify">Aix-Marseille est la 2nde métropôle de France avec 1.83 millions
+                        d’habitants. Elle est touchée par
+                        une forte pollution (activités industrielles (terminal portuaire de Fos) et fort trafic
+                        routier).</p>
+                    <p class="text-justify">En 2016, 71 000 personnes sont toujours exposées à des teneurs supérieures
+                        aux valeurs limites
+                        d’oxydes d’azotes sur le territoire de la métropole. Lorsqu’on s’attache aux recommandations
+                        OMS,
+                        plus contraignantes, 71 % de la population est concernée par au moins un dépassement des teneurs
+                        en
+                        NOx ou en PM10.</p>
+                    <br><hr>
                 </div>
             </div>
         </div>
