fix:change caracte's number font in sign up page

--- a/app/views/devise/registrations/_new_registration_form_fields.html.erb
+++ b/app/views/devise/registrations/_new_registration_form_fields.html.erb
@@ -49,7 +49,7 @@
                             <div class="form-group">
                                 <%= f.label :Mot_de_passe %>
                                 <% if @minimum_password_length %>
-                                <em>(<%= @minimum_password_length %> characters minimum)</em>
+                                <small class="font-italic">(<%= @minimum_password_length %> caractères minimum)</small>
                                 <% end %><br />
                                 <div class="input-group input-group--style-1">
                                     <%= f.password_field :password, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Mot de passe" %>
